Fixing table overflow, sidebar fixes and adjustments

--- a/client/main.css
+++ b/client/main.css
@@ -251,18 +251,25 @@ nav.nav-white-background{
 
 @media (max-width: 768px) {
   #sidebar {
-      margin-left: -250px;
+    min-width: 180px;
+    max-width: 180px;
+  }
+
+  #content{
+    margin-left: 180px;
   }
   #sidebar.active {
-      margin-left: 0px;
-  }
+    margin-left: -180px;
+}
+  /*
+  
 
   #content{
     margin-left: 0px;
   }
   #content.active{
     margin-left: 250px;
-  }
+  } */
 }
 
 #search {
